# DIGITNEWS

./: .env.example  .gitattributes  .gitignore  .mcp.json.example  .prettierignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  capacitor.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
.claude/skills/commit/: SKILL.md
.github/workflows/: android.yml  ci.yml
.husky/: pre-commit
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/app/aushang/: MainActivity.java
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
design/: digitnews-kita-v2 (1).html
docs/: ARCHITECTURE.md  CAPACITOR.md  COVER_IMAGES_SPEC.md  CUSTOM_CATEGORIES.md  GO_LIVE_CHECKLIST.md  NATIVE_TODO.md  PLAY_LAUNCH.md  PLAY_LISTING.md  STORE_PRIVACY.md
public/: sw.js
public/cap-shell/: index.html
scripts/: backfill-translations.mjs  check-no-client-secrets.mjs  check-no-source-secrets.mjs  gen-icons.mjs  setup.mjs
src/: proxy.ts
src/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts
src/app/(app)/: actions.ts  layout.tsx
src/app/(app)/admin/: layout.tsx
src/app/(app)/admin/mitglieder/: actions.ts  add-person-form.tsx  application-row.tsx  groups-panel.tsx  invite-code-card.tsx  join-code-panel.tsx  join-request-row.tsx  member-actions.ts  member-row.tsx  page.tsx  qr-actions.ts
src/app/(app)/aufnahme/: actions.test.ts  actions.ts  capture-launcher.tsx  capture-panel.tsx  native-camera.ts  page.tsx  use-capture.ts
src/app/(app)/bereiche/: actions.ts  category-feed.tsx  mark-seen.tsx  page.tsx
src/app/(app)/einstellungen/: actions.ts  calendar-sub-panel.tsx  delete-account-panel.tsx  digest-toggle.tsx  language-select.tsx  page.tsx  photo-consent-toggle.tsx  push-panel.tsx
src/app/(app)/essensplan/: loading.tsx  page.tsx
src/app/(app)/feed/: feed-card.tsx  loading.tsx  page.tsx
src/app/(app)/gesundheit/: page.tsx
src/app/(app)/info/: page.tsx
src/app/(app)/kalender/: calendar-sub-banner.tsx  calendar-view.tsx  loading.tsx  manual-event-panel.tsx  page.tsx
src/app/(app)/mehr/: page.tsx
src/app/(app)/operator/: actions.ts  create-org-form.tsx  layout.tsx  org-admins.tsx  page.tsx
src/app/(app)/review/: actions.test.ts  actions.ts  loading.tsx  page.tsx  review-card.tsx
src/app/(app)/rueckblick/: loading.tsx  page.tsx  reflection-image.tsx
src/app/api/ics/[token]/: route.ts
src/app/api/worker/callback/: route.ts
src/app/api/worker/translation-callback/: route.ts
src/app/apply/[code]/: actions.ts  apply-form.tsx  page.tsx
src/app/apply/verify/: page.tsx
src/app/auth/callback/: route.ts
src/app/datenschutz/: page.tsx
src/app/join/[code]/: actions.ts  join-form.tsx  page.tsx
src/app/login/: actions.ts  login-form.tsx  page.tsx
src/app/offline/: page.tsx
src/app/passwort-vergessen/: actions.ts  forgot-form.tsx  page.tsx
src/app/registrieren/: actions.test.ts  actions.ts  page.tsx  register-form.tsx
src/app/set-password/: actions.ts  page.tsx  set-password-form.tsx
src/app/start/: actions.ts  page.tsx  start-form.tsx
src/components/: account-menu.tsx  app-nav.tsx  bottom-nav.tsx  bottom-sheet.tsx  category-chip.tsx  date-tile.tsx  grouped-list.tsx  icons.tsx  new-badge.tsx  post-detail.tsx  sign-out-button.tsx  sun-logo.tsx  sw-register.tsx  ui.tsx
src/config/: brand.ts
src/lib/: applications.ts  auth-flows.ts  auth.ts  calendar.test.ts  calendar.ts  capture.ts  clsx.ts  database.types.ts  env.server.ts  env.ts  feed.test.ts  feed.ts  groups.ts  ics-format.test.ts  ics-format.ts  ics.ts  invites.ts  photo.ts  push.ts  routes.ts  validation.test.ts  validation.ts
src/lib/content/: extraction-schema.ts  localize.ts  mask.ts  types.test.ts  types.ts
src/lib/email/: client.ts  templates.ts
src/lib/i18n/: dictionaries.ts  format.ts  provider.tsx  server.ts  types.ts
src/lib/supabase/: admin.ts  client.ts  middleware.ts  server.ts
src/test/: server-only-stub.ts
supabase/: config.toml
supabase/fixtures/: two_orgs.sql
supabase/migrations/: 0001_schema.sql  0002_functions.sql  0003_rls.sql  0004_security_hardening.sql  0005_operator_model.sql  0006_rls_three_roles.sql  0007_operator_model_hardening.sql  0008_content_classification.sql  0009_qr_apply.sql  0010_capture_pipeline.sql  0011_ics_tokens.sql  0012_account_deletion.sql  0013_push_subscriptions.sql  0014_purges.sql  0015_groups_and_roles.sql  0016_dedup_posts.sql  0017_publish_creates_events.sql  0018_takedown_post.sql  0019_republish_reactivates_events.sql  0020_photo_consent.sql  0021_category_views.sql  0022_profile_language.sql  0023_reflection_no_original_and_cover.sql  0024_profile_language_ru.sql  0025_post_translations.sql  0026_superadmin_remove_images.sql  0027_superadmin_manual_events.sql  0028_superadmin_broadcast_events.sql  0029_allow_duplicate_capture.sql  0030_allow_duplicate_superadmin_only.sql  0031_resend_application_verification.sql
worker/: DEPLOY_HOSTINGER.md  Dockerfile  README.md  deploy.sh  pyproject.toml
worker/src/aushang_worker/: __init__.py  app.py  config.py  cover.py  extraction.py  models.py  ocr.py  pipeline.py  redaction.py  translation.py
worker/tests/: test_app.py  test_extraction.py  test_pipeline.py  test_redaction.py  test_translation.py
